# anki_chinese

./: .gitignore  README.md  card_template.apkg  docker-compose.yml  out.txt
app/: Dockerfile  pyproject.toml
app/anki_chinese/: csv.py  images.py  test.py  utils.py
data/: example_char_file.txt  example_import_into_anki.csv  example_import_to_anki.csv  example_vocab_file.yml
lib/: ac_csv.py  ac_text.py  ac_util.py  glang.py  gtrans.py
stroke-order.learningweb.moe.edu.tw/: README.md
